// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders with custom level 1`] = `
<header
  aria-level="1"
  className="eQlQti"
  role="heading"
>
  <span
    className="icuDWf Iwzmp"
    style={Object {}}
  >
    
    <div
      className="hhJOJe"
    >
      <div
        className="bHZSLS"
      >
        <h1
          className="BsAvo"
          color="blue"
          size={
            Object {
              "large": "bronto",
              "medium": "zetta",
              "small": "tera",
              "xLarge": undefined,
              "xSmall": "tera",
            }
          }
        >
          <span
            className="hTDxzq"
          >
            Generic
          </span>
           
          <span
            className="jlRdIN"
          >
            Header
          </span>
        </h1>
      </div>
    </div>
  </span>
</header>
`;

exports[`Header renders with default 1`] = `
<header
  aria-level="1"
  className="eQlQti"
  role="heading"
>
  <span
    className="icuDWf Iwzmp"
    style={Object {}}
  >
    
    <div
      className="hhJOJe"
    >
      <div
        className="bHZSLS"
      >
        <h2
          className="bHZgTp"
          size={
            Object {
              "large": "bronto",
              "medium": "zetta",
              "small": "tera",
              "xLarge": undefined,
              "xSmall": "tera",
            }
          }
        >
          <span
            className="hTDxzq"
          >
            Generic
          </span>
           
          <span
            className="jlRdIN"
          >
            Header
          </span>
        </h2>
      </div>
    </div>
  </span>
</header>
`;

exports[`Header renders withOverlay 1`] = `
<header
  aria-level="1"
  className="eQlQti"
  role="heading"
>
  <span
    className="gradient--overlay icuDWf Iwzmp"
    style={Object {}}
  >
    
    <div
      className="hhJOJe"
    >
      <div
        className="bHZSLS"
      >
        <h2
          className="bHZgTp"
          size={
            Object {
              "large": "bronto",
              "medium": "zetta",
              "small": "tera",
              "xLarge": undefined,
              "xSmall": "tera",
            }
          }
        >
          <span
            className="hTDxzq"
          >
            Generic
          </span>
           
          <span
            className="jlRdIN"
          >
            Header
          </span>
        </h2>
      </div>
    </div>
  </span>
</header>
`;
